cse341 week04
