# routes/index.js
@@ -7,8 +7,8 @@ const allDoc = require("../controller/contacts.js");
 
 router.use("/", require("./swagger.js"))
 router.use("/bio", require("./bio"))
-// router.use(test);
+router.use(test);
 
-// router.use("/contacts", require("./contact"));
+router.use("/contacts", require("./contact"));
 
 module.exports = router;
